index looks good, stuff viewing correctly